# dotfiles

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  Makefile  README.md  Vagrantfile  Vagrantfile.jsonc  ansible.cfg  duplicity-template.cfg  flake.nix  galaxy_roles.yml  hosts  local_env.yml  new_homebrew.nix  package.json  playbook_aws.yml  playbook_local.yml  playbook_ocean.yml  playbook_pi.yml  pyproject.toml  remote_env.yml  setup.cfg
.github/workflows/: change-summary.yaml  publish-formula.yaml  readme-toc.yaml  scrape-hn.yaml  scrape.yaml
.trunk/: logs  notifications  out
ansible/vars/: local_settings.yml
devbox/: README.md  install.sh
devbox/glances/: glances.conf
devbox/launchd/: com.user.devbox-cleanup.plist  com.user.devbox-verify.plist
docs/: BACKUP_SYSTEM_ARCHITECTURE.md  BOOTSTRAP_DEPENDENCY_CHAIN.md  BOOTSTRAP_VALIDATION.md  CONTRIBUTING.md  CUSTOMIZATION.md  FEATURES.md  INSTALLATION.md  MAC_MINI.md  PERFORMANCE_AND_SECURITY.md  TERMINAL_CONFIGURATION.md  TESTING_FRAMEWORK.md  TROUBLESHOOTING.md  USER_CHOICE_FRAMEWORK.md  WEEK_1_IMPLEMENTATION.md  WEEK_2_CHECKLIST.md  WEEK_2_TASKS.md
filter_plugins/: run_after.py
fonts/: README.md
git/: gitconfig
group_vars/: all.yml  local  ocean.yml  pi.yml  remote
home/: pyproject.toml
home/cloudformation/: chromadb-cft.json
home/helpers/: brew-desc.sh  generate_gitignore.sh  homebrew_desc.py  homebrew_search_install.sh  obsidian_bkup_helper.sh  obsidian_git_repo.sh  obsidian_git_repo_finder.sh  path_helper.sh  proc_ninja.sh  slaude2.js  vim_plugins_keymaps.sh
home/terraform/: main.tf  provider.tf
hosts/woodyMBP/: default.nix
llm/: config_qa.txt
misc/bettertouchtool/: bttconfig.json  woodrow.bttpreset
misc/iterm/: OneHalfLight.itermcolors  com.googlecode.iterm2.plist
roles/: README.md
roles/ansible/: aliases.zsh
roles/backup/: README.md
roles/bash/: aliases.sh  colors.sh
roles/bat/: aliases.zsh
roles/dev-environment/: aliases.zsh
roles/docker/: aliases.xsh  aliases.zsh
roles/exa/: aliases.zsh
roles/external-storage/: README.md
roles/eza/: aliases.zsh
roles/frigate/: README.md
roles/fzf/: _env.xsh  _env.zsh
roles/git/: README.md  aliases.sh  aliases.xsh  aliases.zsh
roles/homeassistant/: README.md
roles/hub/: aliases.xsh  aliases.zsh
roles/jrnl/: aliases.zsh
templates/: .pre-commit-config.yaml  README.md
(+235 files in other folders)
