[tool.nitpick]
style = ["https://raw.githubusercontent.com/andreoliwa/nitpick/develop/nitpick-style.toml"]

[tool.poetry]
name = "pydotfiles"
version = "0.1.0"
description = ""
authors = ["W Augusto Andreoli <andreoliwa@proton.me>"]
license = "MIT"
repository = "https://github.com/andreoliwa/dotfiles"
keywords = ["python3", "cli"]
# Trove classifiers
# Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.7"
pylint = {optional = true, version = "*"}

[tool.poetry.extras]
lint = [ "pylint",]

[tool.poetry.dev-dependencies]
pudb = "*"
ipython = "*"
pylint = "*"
